--- a/m4r/views/charts.erb
+++ b/m4r/views/charts.erb
@@ -1,6 +1,6 @@
 <div id="chart-left" class="">
   <div id="chart-left-title">
-    <h1 id="sector_funding_title">Financing by Sector</h1>
+    <h1 id="sector_funding_title">Active Portfolio by Sector</h1>
   </div>
   <div id="chart-left-stat">
     <h1 id="sector_funding_total"></h1>
