--- a/m4r/views/map.erb
+++ b/m4r/views/map.erb
@@ -230,7 +230,7 @@ if(typeof(F1)=='undefined') {F1 = {};}
             return value != sector;
           });
           self.map.swf.addFilter(self.stylelayers["Project Locations"].order, {expression: self.complexSectorExpression(self.visibleSectors)});
-          jq('#layercontrol_sectors').html("Projects");
+          jq('#layercontrol_sectors').html("Overview");
         }
       }
       self.setMapTitle();
