Updated Project API with using the Grant amount where Total Financing Amount is 0

--- a/m4r/views/charts.erb
+++ b/m4r/views/charts.erb
@@ -12,7 +12,7 @@
 
 <div id="chart-right" class="">
   <div id="chart-right-title">
-    <h1>Overview Financing By <%= @country[:name] == "World" ? "Region" : "Project" %></h1>
+    <h1>Portfolio Overview By <%= @country[:name] == "World" ? "Region" : "Project" %></h1>
   </div>
   <div id="chart-right-stat-subtitle">
     <h1 id="funding_total"></h1>
