--- a/m4r/views/overview.erb
+++ b/m4r/views/overview.erb
@@ -18,7 +18,7 @@
                     <li><a href="/about#Feedback">Feedback</a></li>
                   </ul>
                 </div>
-                <% if @country[:name] == "Haiti" %>
+                <% if !@country.nil? && @country[:name] == "Haiti" %>
                 <div class="overview-text"><p>Following the earthquake, the Haiti portfolio was restructured to direct resources toward urgent post-earthquake priorities through the reallocation of funds and the modification of activities in order to adapt to institutional capacity changes. To help Haiti recover from the January 12, 2010 earthquake, the World Bank Group has pledged US$479 million by mid-2011, including cancelling Haiti's remaining US$39 million debt to IDA, thanks to contributions by IDA.</p>
 <p>      As of today, the World Bank has delivered over half of this support: US$91 million are available to Government in the form of new projects, over US$106 million have been disbursed, of which 40 percent is in the form of budget support. The remaining 60 percent has been spent on community reconstruction, transitional offices and equipment for the Ministry of Finance, repairing damaged bridges and roads, draining canals, paying tuition fees for school children and providing them with meals, strengthening Haiti's resilience to disasters, and figuring out how to better manage and recycle debris
 </p>
