--- a/css/style.css
+++ b/css/style.css
@@ -912,6 +912,7 @@ span#infoicon a:hover span {display: block;
 #sidebar-right .item-list li {list-style-type: none;}
 
 .block p {color: #333;}
+.overview-text p { width: 730px;}
 
 /* Stats */
 #stats {}
