--- a/m4r/views/index.erb
+++ b/m4r/views/index.erb
@@ -23,4 +23,5 @@
 <%= partial :charts %>
 
 <%= partial :projects_table unless @country[:name] == "World" || (@region == @country) %>
+<script type="text/javascript" charset="utf-8" src="/js/wb_behaviors.js"></script>
 
