--- a/m4r/views/initialize.erb
+++ b/m4r/views/initialize.erb
@@ -4,7 +4,7 @@
   var wb = new F1.WorldBank();
   <% if @country.page_type == "country" %>
 
-  var projects = [<%= @country[:project_list].collect do |project_id, project|
+  var projects = [<%= @projects.collect do |project_id, project|
          if(project["totalamt"].to_i == 0) 
             project["totalamt"] = project["grantamt"]
          end
@@ -12,9 +12,10 @@
          "{" + (PROJECT_FIELDS + ["sector_code"]).flatten.collect {|key| "#{key}: #{cleanup_attributes(key, project[ key == 'sector_code' ? 'mjsector1' : key])}"}.join(",") + "}"
        end.join(",") %>];
       
-  wb.init(<%= @country[:map].to_s %>,  "<%= @country[:name].to_s %>", "<%= @country[:region].to_s %>", {projects_count: '<%= @country[:projects_count] %>', locations_count: '<%= @country[:locations_count] %>', projects: projects, locations_layer: <%= @country[:locations_layer] || 0 %>});
+  wb.init(<%= @country[:map].to_s %>,  "<%= @country.name.to_s %>", "<%= @country.region.to_s %>", {projects_count: '<%= @country.projects_count %>', locations_count: '<%= @country.locations_count %>', projects: projects, locations_layer: <%= @country.locations_layer || 0 %>});
   <% else %>
   var projects = [];
+  var prodline = <%= @financing[:productline].to_json %>;
   var sectors = <%= @financing[:sectors].to_json %>;
   var regions = <%= @financing[:regions].to_json %>;
      
