--- a/m4r/views/map_header.erb
+++ b/m4r/views/map_header.erb
@@ -4,9 +4,9 @@
           <li class="first"><a href="javascript:return false;" ><%= @country[:name].upcase %> <%= (@country[:name] == "World" || !@region.nil?) ? ' / <span id="map-title">Overview</span>' : '/ <span id="map-title">Projects by Poverty</span>' %></a>
             <ul>
               <% if @country[:name] == "World"   %>
-              <% @country[:regions].each do |region, region_attr| %>
+              <% @country.children.each do |region_attr| %>
               <li><a href="#" onclick="return wb.setLocation('<%= region_attr[:name] %>',<%= region_attr[:lat] %>,<%= region_attr[:lon] %>,<%= region_attr[:zoom] %>)"><%= region_attr[:name] %></a></li>
-              <% end unless @country[:regions].nil? %>
+              <% end unless @country.children.nil? %>
               <% else %>
                 <% if @country[:indicators].include?("Poverty") %><li><a href="#" onclick="return wb.setState(null,'Poverty')">MDG1: Extreme Poverty</a></li><% end %>
                 <% if @country[:indicators].include?("Malnutrition") %><li><a href="#" onclick="return wb.setState(null,'Malnutrition')">MDG1: Malnutrition</a></li><% end %>
