--- a/css/maps.css
+++ b/css/maps.css
@@ -80,8 +80,8 @@
 #chart-right-stat-subtitle h1 {font-family:Georgia, serif; font-size:26px; color:#970001; font-weight:bold;}
 #subtitle-comment { width:100px; height:30px;font-family:Arial, sans-serif; font-size:11px; color:#9f9f9f;}
 #chart-right-graph {width:440px; height:170px; margin-left:25px;}
-	
-.subtotal {color: rgb(136, 136, 136); font-size: 0.8em;}
+#chart-right-graph-description {display: none;}	
+.subtotal {color: rgb(136, 136, 136); font-size: 0.8em; cursor: pointer;}
 .chart_about {margin-left: 10px;color:#8A8A8A;}
 /* ........................................................END NEW 9/23/2010.................................................................. */
 
@@ -102,7 +102,9 @@
 table#projects-table_grid  {border-collapse: collapse;width:960px;font-family:Arial, sans-serif;font-size:12px;color:#000;}
 table {height: 400px;overflow-y: scroll; overflow-x: hidden;}
 #project-search-box {display: none;}
-table#projects-table_grid ,th, td {padding:0 13px; margin-top:6px;}
+table#projects-table_grid, th, td {padding:0 13px; margin-top:6px; cursor: pointer;}
+table#projects-table_grid tr:hover { background-color: #D9DBCD;}
+
 th,tr{height:50px}
 table#projects-table_grid tr .active { border:2px solid #9b0a07;  }
 table#projects-table_grid tr .inactive { border:none; }
