--- a/m4r/views/infowindow.erb
+++ b/m4r/views/infowindow.erb
@@ -1,4 +1,4 @@
-  <div id="map_factbox"><h3 class="factbox-title"><%= @country[:name].capitalize %></h3>
+  <div id="map_factbox"><h3 class="factbox-title"><%= @page[:name].capitalize %></h3>
     <p class="map-factbox-info"><b>Region:</b>Kignoma</p>
     <p class="map-factbox-info"><b>Total Projects:</b>56</p>
     <p class="map-factbox-info"><b>Total Funding:</b>12 Million</p>
