--- a/m4r/views/analytics.erb
+++ b/m4r/views/analytics.erb
@@ -17,8 +17,8 @@ var s_pageName="Home > Maps > <%= @page_subtitle %>";
 var s_channel="WBG Mapping for Results EXT";
 var s_hier1 = "WBG,WBG Mapping for Results EXT";
 var s_prop1 = "";
-var s_prop6 = "<%= @country[:region] unless @country.nil? %>"; / Region /
-var s_prop7 = "<%= @country[:name] unless @country.nil? %>"; / Country /
+var s_prop6 = "<%= @page[:region] unless @page.nil? %>"; / Region /
+var s_prop7 = "<%= @page[:name] unless @page.nil? %>"; / Country /
 var s_prop2 = "Not Available"; /* Author /
 var s_prop3 = "Not Available"; / Date /
 var s_prop4 = "Not Available"; / Topic /
