--- a/m4r/views/layer_controls.erb
+++ b/m4r/views/layer_controls.erb
@@ -1,7 +1,7 @@
 <div id="layerinfo">
   <ul>
     <li class="">
-    <% unless @country[:name] == "World" || (@region == @country) %>Choose the indicator data and portfolio projects below to investigate mapping for results:<% else %>
+    <% unless @page[:name] == "World" || (@region == @page) %>Choose the indicator data and portfolio projects below to investigate mapping for results:<% else %>
     Investigate World Bank projects in currently highlighted countries using "Locations" tab.<% end %></li>
   </ul>
 </div>
@@ -9,34 +9,34 @@
   <ul class="dropmenu">
     <li class="first" title="Zoom to Locations"><a href="#" onclick="return false;">LOCATIONS</a>
       <ul id="locations_list">
-        <% if @country[:name] == "World" || (@region == @country) %>
-          <% @country.children.each do |region_attr| %>
+        <% if @page[:name] == "World" || (@region == @page) %>
+          <% @page.children.each do |region_attr| %>
             <% region_attr.children.each do |country_attr| %>
             <% if (country_attr[:status] == 'active') %>
             <li><a href="<%= (country_attr[:status] == 'inactive') ? "#" : "/#{region_attr.shortname}/#{country_attr.shortname}" %>" class="<%= country_attr[:status] %>"><%= country_attr[:name] %></a></li>
             <% end %>
             <% end %>
           <% end  %>              
-        <% elsif(@country.adm1 != nil) %>
-            <%= menu_options(@country[:adm1]) %>
+        <% elsif(@page.adm1 != nil) %>
+            <%= menu_options(@page[:adm1]) %>
         <% end %>
       </ul>
     </li>
   </ul>
-  <ul class="dropmenu <%= 'inactive' if @country[:name] == "World" || (@region == @country) %>">
+  <ul class="dropmenu <%= 'inactive' if @page[:name] == "World" || (@region == @page) %>">
     <li class="first" title="Layer: Indicators"><a href="#" id="layercontrol_indicators" onclick="wb.setIndicator(); return false">INDICATORS</a>
-      <% unless @country[:name] == "World" || (@region == @country) %>
+      <% unless @page[:name] == "World" || (@region == @page) %>
       <ul>
-        <% @country[:indicators].each do |indicator| %>
+        <% @page[:indicators].each do |indicator| %>
         <li><a href="#" onclick="wb.setIndicator('<%= indicator %>'); return false"><%= indicator %></a></li>
         <% end %>
       </ul>
       <% end %>
     </li>
   </ul>
-  <ul class="dropmenu <%= 'inactive' if @country[:name] == "World" || (@region == @country) %>">
+  <ul class="dropmenu <%= 'inactive' if @page[:name] == "World" || (@region == @page) %>">
     <li class="first" title="Layer: Projects"><a href="#" id="layercontrol_projects" onclick="return wb.toggleSector('none',false)">PROJECTS</a>
-      <% unless @country[:name] == "World" || (@region == @country) %>
+      <% unless @page[:name] == "World" || (@region == @page) %>
       <ul>
         <li><a href="#" onclick="wb.toggleSector('counts_admin1', true); return false">Number by Province</a></li>
         <li><a href="#" onclick="wb.toggleSector('counts_admin2', true); return false">Number by District</a></li>
@@ -46,11 +46,11 @@
       <% end %>
     </li>
   </ul>
-  <ul class="dropmenu <%= 'inactive' if @country[:name] == "World" || (@region == @country) %> ">
+  <ul class="dropmenu <%= 'inactive' if @page[:name] == "World" || (@region == @page) %> ">
     <li title=""><a href="#" onclick="return false">RESULTS</a>
-      <% unless @country[:name] == "World" || (@region == @country) %>
+      <% unless @page[:name] == "World" || (@region == @page) %>
       <ul>
-        <% @country[:results].each do |result| %>
+        <% @page[:results].each do |result| %>
         <li><a href="<%= result[:link] %>" target="_new"><%= result[:name] %></a></li>
         <% end if false %>
       </ul>
