--- a/m4r/views/map_header.erb
+++ b/m4r/views/map_header.erb
@@ -1,24 +1,24 @@
     <div id="map-content-header">
       <div class="worldmenuholder">
         <ul class="worldmenu">
-          <li class="first"><a href="javascript:return false;" ><%= @country[:name].upcase %> <%= (@country[:name] == "World" || !@region.nil?) ? ' / <span id="map-title">Overview</span>' : '/ <span id="map-title">Projects by Poverty</span>' %></a>
+          <li class="first"><a href="javascript:return false;" ><%= @page[:name].upcase %> <%= (@page[:name] == "World" || !@region.nil?) ? ' / <span id="map-title">Overview</span>' : '/ <span id="map-title">Projects by Poverty</span>' %></a>
             <ul>
-              <% if @country[:name] == "World"   %>
-              <% @country.children.each do |region_attr| %>
+              <% if @page[:name] == "World"   %>
+              <% @page.children.each do |region_attr| %>
               <li><a href="#" onclick="return wb.setLocation('<%= region_attr[:name] %>',<%= region_attr[:lat] %>,<%= region_attr[:lon] %>,<%= region_attr[:zoom] %>)"><%= region_attr[:name] %></a></li>
-              <% end unless @country.children.nil? %>
+              <% end unless @page.children.nil? %>
               <% else %>
-                <% if @country[:indicators].include?("Poverty") %><li><a href="#" onclick="return wb.setState(null,'Poverty')">MDG1: Extreme Poverty</a></li><% end %>
-                <% if @country[:indicators].include?("Malnutrition") %><li><a href="#" onclick="return wb.setState(null,'Malnutrition')">MDG1: Malnutrition</a></li><% end %>
-                <% if @country[:indicators].include?("Infant Mortality") %><li><a href="#" onclick="return wb.setState(null,'Infant Mortality')">MDG4: Infant Mortality</a></li><% end %>
-                <% if @country[:indicators].include?("Maternal Health") %><li><a href="#" onclick="return wb.setState(null,'Maternal Health')">MDG5: Births attended by skilled health staff</a></li><% end %>
+                <% if @page[:indicators].include?("Poverty") %><li><a href="#" onclick="return wb.setState(null,'Poverty')">MDG1: Extreme Poverty</a></li><% end %>
+                <% if @page[:indicators].include?("Malnutrition") %><li><a href="#" onclick="return wb.setState(null,'Malnutrition')">MDG1: Malnutrition</a></li><% end %>
+                <% if @page[:indicators].include?("Infant Mortality") %><li><a href="#" onclick="return wb.setState(null,'Infant Mortality')">MDG4: Infant Mortality</a></li><% end %>
+                <% if @page[:indicators].include?("Maternal Health") %><li><a href="#" onclick="return wb.setState(null,'Maternal Health')">MDG5: Births attended by skilled health staff</a></li><% end %>
                 <li><a href="#" onclick="return wb.setState(null,null,null,['all'])">Project Portfolio</a></li>
-                <% if @country[:indicators].include?("Poverty") %><li><a href="#" onclick="return wb.setState(null,'Poverty',null,['all'])">Projects by Poverty</a></li><% end %>
-                <% if @country[:indicators].include?("Population") %><li><a href="#" onclick="return wb.setState(null,'Population',null,['all'])">Projects by Population</a></li><% end %>
+                <% if @page[:indicators].include?("Poverty") %><li><a href="#" onclick="return wb.setState(null,'Poverty',null,['all'])">Projects by Poverty</a></li><% end %>
+                <% if @page[:indicators].include?("Population") %><li><a href="#" onclick="return wb.setState(null,'Population',null,['all'])">Projects by Population</a></li><% end %>
               <% end %>
             </ul>
           </li>
         </ul>
       </div>
-      <%= partial :sector_controls unless @country[:name] == "World" %>
+      <%= partial :sector_controls unless @page[:name] == "World" %>
     </div>
