--- a/m4r/views/share.erb
+++ b/m4r/views/share.erb
@@ -1,7 +1,7 @@
     <div id="share">
-        <% unless (!@country.nil? && @country[:name] == "World") %><a href="/" id="world_link">&laquo back to World Map</a><% end %>
+        <% unless (!@page.nil? && @page[:name] == "World") %><a href="/" id="world_link">&laquo back to World Map</a><% end %>
       <ul>
-        <% if !@country.nil? && @country[:name] != "World" %><li class="download"><a href="" id="download_data">DOWNLOAD</a></li><% end %>
+        <% if !@page.nil? && @page[:name] != "World" %><li class="download"><a href="" id="download_data">DOWNLOAD</a></li><% end %>
         <li class="simpleshare_link"><a href="#" title="Share">SHARE</a></li>
       </ul>
     </div>
